# aura

./: ACheckBox.qml  AImage.qml  ASlider.qml  Audio.qml  Backbutton.qml  CMakeLists.txt  Chip.qml  ComponentLabel.qml  Dialogue.qml  README.md  ResolutionBox.qml  Video.qml  audio_provider.cpp  audio_provider.h  audio_worker.cpp  audio_worker.h  image_item.cpp  image_item.h  image_provider.cpp  image_provider.h  image_worker_thread.cpp  image_worker_thread.h  main.cpp  main.qml  qml.qrc  video_provider.cpp  video_provider.h  video_worker_thread.cpp  video_worker_thread.h
cmake/: FindLibSndFile.cmake
